@@ -7,6 +7,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
@@ -16,50 +17,61 @@ import java.nio.file.attribute.BasicFileAttributes;
 import java.time.Instant;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Optional;
 
 /**
+ * Implementation of FileAccessor for use with a local file system.
+ * <p>
  * Created by Damien on 9/11/2016.
  */
 @Profile("dev")
 @Service
 public class LocalFileSystemAccess implements FileAccessor {
+    private final org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(LocalFileSystemAccess.class);
+
     @Override
-    public FileInformation getUrl(String path) {
-        try {
-            File file = new File(path);
-            return new FileInformation(file.toURI().toURL(), Instant.ofEpochMilli(file.lastModified()));
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
-            return null;
-        }
+    public FileInformation getFileInformation(String path) throws MalformedURLException, URISyntaxException {
+        return getFileInformation(new URL(path));
     }
 
     @Override
-    public List<FileInformation> getUrls(String path) {
-        List<FileInformation> urls = new LinkedList<>();
-        Path p = Paths.get(path);
+    public FileInformation getFileInformation(URL path) throws URISyntaxException {
+        File f = null;
         try {
+            f = new File(path.toURI());
+        } catch (IllegalArgumentException ex) {
+            logger.warn("Path {} is an invalid file URL. Reason: {} - Timestamp information is unavailable.", path.toExternalForm(), ex.getMessage());
+        }
+        Long timestamp = f != null ? f.lastModified() : Instant.now().toEpochMilli();
+        return new FileInformation(path);
+    }
+
+    @Override
+    public List<FileInformation> getAllFileInformation(String path) {
+        List<FileInformation> urls = new LinkedList<>();
+        try {
+            Path p = Paths.get(new File(path).toURI());
             try (DirectoryStream<Path> stream = Files.newDirectoryStream(p)) {
                 stream.forEach(filePath -> {
                     try {
-                        urls.add(new FileInformation(filePath.toUri().toURL(), Instant.ofEpochMilli(Files.readAttributes(filePath, BasicFileAttributes.class).creationTime().toMillis())));
-                    } catch (IOException ex){
-                        ex.printStackTrace();
+                        urls.add(new FileInformation(filePath.toUri().toURL()));
+                    } catch (IOException ex) {
+                        //Should never happen; can't throw checked exception inside a lambda
+                        throw new RuntimeException(ex);
                     }
                 });
             }
-        } catch (IOException ex){
+        } catch (IOException ex) {
             throw new RuntimeException(ex);
         }
         return urls;
     }
 
     @Override
-    public InputStream getUrlContent(URL path) {
-        try {
-            return path.openStream();
-        }catch (IOException ex){
-            throw new RuntimeException(ex);
+    public Optional<InputStream> getContent(FileInformation path) throws IOException {
+        if (path == null) {
+            return Optional.empty();
         }
+        return Optional.of(path.getFileUrl().openStream());
     }
 }
